--- a/app/assets/stylesheets/components/_obstacle_done_card.scss
+++ b/app/assets/stylesheets/components/_obstacle_done_card.scss
@@ -1,3 +1,16 @@
+.obstacle-done-container {
+  margin-left: 60px;
+  margin-right: 60px;
+  padding-bottom: 100px;
+}
+
+.obstacle-done-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .obstacle-done-card {
   display: flex;
   justify-content: space-between;
